# seqsvr

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  perf_report.md  setup.sh
docs/superpowers/plans/: 2026-06-26-seqsvr.md
docs/superpowers/specs/: 2026-06-26-seqsvr-design.md
proto/: seqsvr.proto
src/allocsvr/: CMakeLists.txt  alloc_service.cpp  alloc_service.h  lease_holder.cpp  lease_holder.h  main.cpp  nrw_coordinator.cpp  nrw_coordinator.h  section_state.cpp  section_state.h
src/client/: CMakeLists.txt  seq_client.cpp  seq_client.h
src/common/: CMakeLists.txt  route_table.h  types.h
src/storesvr/: CMakeLists.txt  lease_manager.cpp  lease_manager.h  main.cpp  storage.cpp  storage.h  store_service.cpp  store_service.h
test_results/: 2026-07-02.md  bench_20260702-004737.md
tests/: CMakeLists.txt
tests/integration/: test_full_flow.cpp
tests/perf/: bench_client.cpp
tests/unit/: test_route_table.cpp  test_section_state.cpp  test_storage.cpp
